{
  "version": 4,
  "terraform_version": "0.12.18",
  "serial": 111,
  "lineage": "ab651209-93c6-47a7-516b-40934b013960",
  "resources": [
    {
      "module": "module.another_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f37c3995fffb4fd",
            "arn": "arn:aws:ec2:eu-west-2:044463453895:instance/i-08cc5a043e19cda71",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "terraform-20200108222359384600000003",
            "id": "i-08cc5a043e19cda71",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cfn-kp",
            "monitoring": false,
            "primary_network_interface_id": "eni-0164d3095cf727410",
            "private_dns": "ip-172-31-29-145.eu-west-2.compute.internal",
            "private_ip": "172.31.29.145",
            "public_dns": "ec2-35-178-176-232.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.178.176.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-020608d7f6a25f650",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tf_instance_CYeMoqHp-20200108223623135700000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b2d167c8",
            "tags": {
              "Name": "tf_instance_CYeMoqHp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0341b87251817fbbc"
            ]
          },
          "dependencies": [
            "module.another_instance.aws_iam_instance_profile.instance_profile",
            "module.another_instance.aws_iam_role.instance_logs_role",
            "module.another_instance.aws_security_group.tf_security_group",
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.west1_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_instance",
      "provider": "provider.aws.euwest1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01f14919ba412de34",
            "arn": "arn:aws:ec2:eu-west-1:044463453895:instance/i-030f175a99878fa59",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "terraform-20200108224405385600000003",
            "id": "i-030f175a99878fa59",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-0378af2828989afba",
            "private_dns": "ip-172-31-42-169.eu-west-1.compute.internal",
            "private_ip": "172.31.42.169",
            "public_dns": "ec2-52-49-91-204.eu-west-1.compute.amazonaws.com",
            "public_ip": "52.49.91.204",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-0995f76d945893b7d",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tf_instance_CYeMoqHp-20200108224403518300000001"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-f9f64da3",
            "tags": {
              "Name": "tf_instance_CYeMoqHp"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-085c5a4f2c765c2bc"
            ]
          },
          "dependencies": [
            "module.west1_instance.aws_iam_instance_profile.instance_profile",
            "module.west1_instance.aws_iam_role.instance_logs_role",
            "module.west1_instance.aws_security_group.tf_security_group",
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_instance",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-05f37c3995fffb4fd",
            "arn": "arn:aws:ec2:eu-west-2:044463453895:instance/i-0113fd6cfdd196c58",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "terraform-20200108221316401200000003",
            "id": "i-0113fd6cfdd196c58",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cfn-kp",
            "monitoring": false,
            "primary_network_interface_id": "eni-088a5001bb0e7aa0a",
            "private_dns": "ip-172-31-17-159.eu-west-2.compute.internal",
            "private_ip": "172.31.17.159",
            "public_dns": "ec2-35-177-81-30.eu-west-2.compute.amazonaws.com",
            "public_ip": "35.177.81.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-028095e961bcb9f4a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "tf_instance-20200108221314071700000002"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-b2d167c8",
            "tags": {
              "Name": "tf_instance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-09cb26a2cfecb4eb2"
            ]
          },
          "dependencies": [
            "module.instance.aws_iam_instance_profile.instance_profile",
            "module.instance.aws_iam_role.instance_logs_role",
            "module.instance.aws_security_group.tf_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.another_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:044463453895:security-group/sg-0341b87251817fbbc",
            "description": "Allows HTTP \u0026 conditional SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0341b87251817fbbc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_instance_CYeMoqHp-20200108223623135700000001",
            "name_prefix": "tf_instance_CYeMoqHp-",
            "owner_id": "044463453895",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-1245257a"
          },
          "dependencies": [
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.west1_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_security_group",
      "provider": "provider.aws.euwest1",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:044463453895:security-group/sg-085c5a4f2c765c2bc",
            "description": "Allows HTTP \u0026 conditional SSH access",
            "egress": [],
            "id": "sg-085c5a4f2c765c2bc",
            "ingress": [],
            "name": "tf_instance_CYeMoqHp-20200108224403518300000001",
            "name_prefix": "tf_instance_CYeMoqHp-",
            "owner_id": "044463453895",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-b2b5b8d4"
          },
          "dependencies": [
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "tf_security_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:044463453895:security-group/sg-09cb26a2cfecb4eb2",
            "description": "Allows HTTP \u0026 conditional SSH access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09cb26a2cfecb4eb2",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "tf_instance-20200108221314071700000002",
            "name_prefix": "tf_instance-",
            "owner_id": "044463453895",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-1245257a"
          }
        }
      ]
    },
    {
      "module": "module.another_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-1548440818",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0341b87251817fbbc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.another_instance.aws_security_group.tf_security_group",
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.west1_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress_all",
      "provider": "provider.aws.euwest1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3878309717",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-085c5a4f2c765c2bc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.west1_instance.aws_security_group.tf_security_group",
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_egress_all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 0,
            "id": "sgrule-2542465419",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-09cb26a2cfecb4eb2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "dependencies": [
            "module.instance.aws_security_group.tf_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.another_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-158024397",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0341b87251817fbbc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.another_instance.aws_security_group.tf_security_group",
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.west1_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider.aws.euwest1",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-1753579926",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-085c5a4f2c765c2bc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.west1_instance.aws_security_group.tf_security_group",
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 80,
            "id": "sgrule-3952484452",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09cb26a2cfecb4eb2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "dependencies": [
            "module.instance.aws_security_group.tf_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.another_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-3219201912",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0341b87251817fbbc",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.another_instance.aws_security_group.tf_security_group",
            "random_string.instance_name"
          ]
        }
      ]
    },
    {
      "module": "module.west1_instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "each": "list",
      "provider": "provider.aws.euwest1",
      "instances": []
    },
    {
      "module": "module.instance",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_ssh",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "",
            "from_port": 22,
            "id": "sgrule-1562148305",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09cb26a2cfecb4eb2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "dependencies": [
            "module.instance.aws_security_group.tf_security_group"
          ]
        }
      ]
    }
  ]
}